--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply from: 'publish.gradle'
 
 android {
     compileSdkVersion 28
@@ -26,7 +27,20 @@ android {
         useLibrary 'org.apache.http.legacy'
     }
 }
+buildscript {
+    repositories {
+        google()
+        jcenter()
 
+    }
+    dependencies {
+
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     api 'androidx.appcompat:appcompat:1.0.2'
